# dev-templates

python/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  config.yaml  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
python/db/: env.py
python/src/: __init__.py  main.py
python/src/dependencies/: __init__.py  config.py  database.py  http_client.py  logger.py  tracer.py
python/src/exceptions/: __init__.py  sample_exception.py
python/src/models/: __init__.py  sample_model.py
python/src/repositories/: __init__.py  health_repository.py  sample_repository.py
python/src/routers/: __init__.py  health_router.py  sample_router.py
python/src/schemas/: __init__.py  health_schema.py  response_schema.py
python/src/services/: __init__.py  health_service.py  sample_service.py
